# DesignPatterns

factory/: factory  factory.cpp
factory/gameExample/: CMakeLists.txt  M16.cpp  M16.h  attachments.cpp  attachments.h  main.cpp
